# espeak-ng-sapi

./: CMakeLists.txt  README.md  build_all.bat
configurator/: MainDialog.cpp  MainDialog.hpp  ProfileDialog.cpp  ProfileDialog.hpp  main.cpp  resource.h  resource.rc
installer/: espeak-sapi.iss
src/: IEnumSpObjectTokensImpl.cpp  IEnumSpObjectTokensImpl.hpp  ISpDataKeyImpl.cpp  ISpDataKeyImpl.hpp  ISpTTSEngineImpl.cpp  ISpTTSEngineImpl.hpp  com.cpp  com.hpp  config_manager.cpp  config_manager.hpp  debug_log.h  error_handler.hpp  espeak_wrapper.cpp  espeak_wrapper.h  registry.cpp  registry.hpp  sapi_main.cpp  utils.hpp  voice_attributes.hpp  voice_token.cpp  voice_token.hpp  voice_utils.hpp  win32_utils.hpp
